2002-12-28  NABEYA Kenichi  <emacs-w3m@nabeken.com>

	* shimbun/sb-mew.el (shimbun-mew-group-url-alist): Update.

2002-12-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-mailman.el (shimbun-mailman-make-contents): Make
	regexps more redundant.

2002-12-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-savannah.el (shimbun-savannah-x-face-alist): New.

2002-12-20  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-about-db-history): Display the information of page.

2002-12-19  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-local-dirlist-cgi): Treat a local cookie.

2002-12-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yomiuri.el (shimbun-yomiuri-x-face-alist): New.

2002-12-18  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-e21.el (w3m-favicon-type): Change default value and type of
	custom.
	(w3m-favicon-type-alist): New internal variable.
	(w3m-setup-favicon): Don't check 'xpm.
	(w3m-buffer-favicon): Decide image type of Emacs use
	`w3m-favicon-type-alist'.

2002-12-17  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-type): Suppert `stable version notation' of
	w3m-m17n.

2002-12-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yomiuri.el (shimbun-get-headers): Remove garbages.

2002-12-07  YAMASHITA Junji  <ysjj@unixuser.org>

	* shimbun/sb-ibm-dev.el (shimbun-get-headers): Follow the change
	of date format.

2002-11-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-header-line-map): Prevent tool-bar from being
	doubled under Emacs 21.

2002-11-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-search.el (w3m-search-engine-alist): Specify coding-system
	for the waei and kokugo entries.  Suggested by Hideyuki SHIRAI.

2002-11-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-tabmenu.el (w3m-tab-menubar-update): Do nothing when there's
	no menubar.

2002-11-26  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-use-unseen): Remove
	duplicate definition.
	(mew-shimbun-unseen-regex): New inline macro.