@@ -1,3 +1,10 @@
+2003-01-06  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* mew-w3m.el (mew-w3m-ext-url-show): New funcition.
+	(mew-w3m-ext-url-fetch): Ditto.
+	(top): Modify comment. Avoid byte-compile warning for
+	`mew-window-configure'.
+
 2002-12-28  NABEYA Kenichi  <emacs-w3m@nabeken.com>
 
 	* shimbun/sb-mew.el (shimbun-mew-group-url-alist): Update.
